erDiagram
    %% ============================================
    %% JONAS DATA PLATFORM — Core Data Model
    %% Updated to reflect actual implementation (Phase 6)
    %% ============================================

    %% === TENANCY & IDENTITY ===
    tenant {
        uuid id PK
        text slug UK "url-safe identifier"
        text name
        json config "feature flags, limits, quotas"
        text storage_prefix "parquet path namespace"
        timestamp created_at
    }

    user_account {
        uuid id PK
        text email UK
        text display_name
        text password_hash "PBKDF2-SHA256"
        text role "admin|analyst|viewer"
        timestamp created_at
        timestamp revoked_at "soft delete"
    }

    tenant_membership {
        uuid id PK
        uuid tenant_id FK
        uuid user_id FK
        text role "admin|analyst|viewer"
        json scope "optional namespace restrictions"
        timestamp granted_at
        uuid granted_by FK
    }

    tenant_config {
        uuid id PK
        uuid tenant_id FK
        text llm_provider "openai|google|ollama"
        text llm_model
        boolean pii_enabled
        json settings "additional config"
    }

    invite {
        uuid id PK
        uuid tenant_id FK
        text email
        text role
        text token UK
        uuid invited_by FK
        timestamp created_at
        timestamp accepted_at
    }

    tenant ||--o{ tenant_membership : "has members"
    tenant ||--|| tenant_config : "configured by"
    tenant ||--o{ invite : "invitations"
    user_account ||--o{ tenant_membership : "belongs to"

    %% === SCHEMA CATALOGUE ===
    namespace {
        uuid id PK
        uuid tenant_id FK
        text name "e.g. sales, marketing, ops"
        text description
        timestamp created_at
        uuid created_by FK
    }

    entity {
        uuid id PK
        uuid namespace_id FK
        text name "e.g. orders, customers"
        text layer "bronze|silver|gold"
        text storage_format "parquet|view|materialised"
        text description
        int version
        json meta "tags, SLA, freshness target"
        timestamp created_at
        uuid created_by FK
    }

    entity_field {
        uuid id PK
        uuid entity_id FK
        text name
        text data_type "string|int|float|bool|timestamp|json|array"
        boolean nullable
        boolean is_pii "drives masking policy"
        text description
        int ordinal
        uuid created_by FK
        timestamp created_at
    }

    entity_lineage {
        uuid id PK
        uuid source_entity_id FK
        uuid target_entity_id FK
        uuid transform_id FK "nullable"
        text lineage_type "derived|aggregated|filtered|joined"
    }

    tenant ||--o{ namespace : contains
    namespace ||--o{ entity : contains
    entity ||--o{ entity_field : defines
    entity ||--o{ entity_lineage : "is source"
    entity ||--o{ entity_lineage : "is target"

    %% === TRANSFORMS ===
    transform {
        uuid id PK
        uuid tenant_id FK
        text name
        uuid source_entity_id FK
        uuid target_entity_id FK
        text transform_type "sql|python|dbt_ref"
        text definition "SQL body or code"
        text schedule "cron or null"
        text status "draft|approved|active|paused|failed"
        text trigger_mode "manual|on_change"
        json watch_entities "entity IDs to watch"
        uuid created_by FK
        uuid approved_by FK "nullable"
        timestamp created_at
        timestamp last_run_at
    }

    transform_run {
        uuid id PK
        uuid transform_id FK
        text status "running|success|failed"
        timestamp started_at
        timestamp completed_at
        bigint rows_produced
        json error_detail
    }

    transform ||--o{ entity_lineage : produces
    transform ||--o{ transform_run : "execution log"
    entity ||--o{ transform : "source of"
    entity ||--o{ transform : "target of"

    %% === CONNECTORS (renamed from integrations in Phase 4) ===
    connector {
        uuid id PK
        uuid tenant_id FK
        text name
        text source_type "webhook|batch|api_pull"
        text status "draft|active|paused|error"
        json source_config "connection, auth, endpoint"
        json sink_config "target entity, field mapping"
        text cron_schedule "cron expression for scheduling"
        uuid target_entity_id FK
        uuid created_by FK
        timestamp created_at
    }

    connector_run {
        uuid id PK
        uuid connector_id FK
        text status "running|success|partial|failed"
        timestamp started_at
        timestamp completed_at
        bigint records_in
        bigint records_out
        bigint records_rejected
        json error_detail
    }

    tenant ||--o{ connector : owns
    connector ||--o{ connector_run : "execution history"
    entity ||--o{ connector : "lands into"

    %% === PERMISSIONS ===
    permission_grant {
        uuid id PK
        uuid tenant_id FK
        text principal_type "role|user"
        text principal_id "role name or user uuid"
        text resource_type "namespace|entity|connector|transform"
        uuid resource_id "null means all of type"
        text action "read|write|create|delete|approve|execute"
        timestamp granted_at
        uuid granted_by FK
    }

    tenant ||--o{ permission_grant : governs

    %% === AUDIT ===
    audit_log {
        uuid id PK
        uuid tenant_id FK
        uuid user_id FK "nullable for system"
        text action
        text resource_type
        uuid resource_id
        json detail "before/after snapshot"
        timestamp created_at
    }

    agent_memory {
        uuid id PK
        uuid tenant_id FK
        uuid user_id FK
        text key
        text value
        float score "relevance decay"
        timestamp created_at
        timestamp last_accessed
    }

    tenant ||--o{ audit_log : "tracked by"
    tenant ||--o{ agent_memory : "agent learns"
    user_account ||--o{ audit_log : performs
